@@ -4,6 +4,7 @@
 + added "Progress View" form
 + fixed a strange menu event problem
 + added volume & balance controls for filters exposing the IBasicAudio interface
++ MPEG1VIDEOINFO and MPEG2VIDEOINFO now displays sequence header data
 
 [0.2.2.0 - Beta    24/Mar/2008]
 + added frame-step button
